# cryptid

./: README.md  pyproject.toml  run.py
cryptids/: button.py  card.py  eventloopwrapper.py  game.py  gameboard.py  gameplay.py  gameplaysettings.py  gamewrapper.py  keyboard.py  loggingdecorator.py  settings.py  usermanagement.py  utils.py
nfts/: generate_nfts.py  nft_info.json  nftdata.py
tests/: test_card.py  test_keyboard.py
users/: user_details.json
workflows/: main.yml
